@@ -276,10 +276,6 @@ module ActiveScaffold::Actions
     end
 
     def new_model
-      # ignore nested unrelated to current controller, e.g. adding record in subform inside subform, would create wrong parent_record
-      if nested? && nested.association && nested.association.klass != active_scaffold_config.model
-        return active_scaffold_config.model.new
-      end
       relation = beginning_of_chain
       build_options = sti_nested_build_options(relation.klass) if nested? && nested.plural_association?
       relation.respond_to?(:build) ? relation.build(build_options || {}) : relation.new
