@@ -29,6 +29,7 @@
 - Add support for range conditions in url params for numeric (integer, decimal, float, bigint) columns too
 - Support include_blank option in :radio form_ui
 - Add add_new option for :select form_ui in singular associations, in column.options, it adds link to toggle between select and subform
+- Fix subform crud in subform subgroup, when form is on nested scaffold, when record on first subform is persisted
 
 = 3.6.0.pre
 - Added threadsafety as tech preview, enabled with ActiveScaffold.threadsafe! in initializer.
